--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-OP2T6FEB\\SQLEXPRESS;Database=WebShop;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
