added diffrent packege for identity and added scafolding for identity and generate

--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-OP2T6FEB\\SQLEXPRESS;Database=WebShop;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=LAPTOP-OP2T6FEB\\SQLEXPRESS;Database=WebShop;Trusted_Connection=True;TrustServerCertificate=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
