--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-OP2T6FEB\\SQLEXPRESS;Database=WebShop;Trusted_Connection=True;TrustServerCertificate=True;",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-OP2T6FEB\\SQLEXPRESS;Database=WebShop;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
